// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render <a> tag by default 1`] = `
<a
  class="StyledButton-k0ad56-0 dZQwmX"
>
  <span
    class="ContentWrapper-juvto2-0 kMRFXB"
  >
    <span
      class="ChildrenWrapper-sc-30uoyc-0 kRFFMw"
    >
      <span>
        children
      </span>
    </span>
  </span>
</a>
`;

exports[`<Button /> should render correctly with custom props 1`] = `
<button
  class="StyledButton-k0ad56-0 iquivx"
>
  <span
    class="SpinnerWrapper-sc-1ln0y9p-0 csgNUt"
  >
    <span
      data-testid="spinner"
    />
  </span>
  <span
    class="ContentWrapper-juvto2-0 haOASu"
  >
    <span>
      <span>
        left
      </span>
    </span>
    <span
      class="ChildrenWrapper-sc-30uoyc-0 kRFFMw"
    >
      <span>
        children
      </span>
    </span>
    <span>
      <span>
        right
      </span>
    </span>
  </span>
</button>
`;

exports[`<Button /> should render correctly with default props and children 1`] = `
<button
  class="StyledButton-k0ad56-0 dZQwmX"
>
  <span
    class="ContentWrapper-juvto2-0 kMRFXB"
  >
    <span
      class="ChildrenWrapper-sc-30uoyc-0 kRFFMw"
    >
      <span>
        children
      </span>
    </span>
  </span>
</button>
`;

exports[`<Button /> should render render <button> tag 1`] = `
<button
  class="StyledButton-k0ad56-0 dZQwmX"
>
  <span
    class="ContentWrapper-juvto2-0 kMRFXB"
  >
    <span
      class="ChildrenWrapper-sc-30uoyc-0 kRFFMw"
    >
      <span>
        children
      </span>
    </span>
  </span>
</button>
`;
